Comparison with in situ data finished...

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -64,3 +64,5 @@
 \newacronym{vsf}{VSF}{volume scattering function}
 \newacronym{ys}{YS}{yellow substance}
 
+\newacronym{nrmse}{NRMSE}{normalized root mean squared error}
+
