--- a/javier_bibPhD.bib
+++ b/javier_bibPhD.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Javier Concha First at 2015-10-17 20:09:36 -0400 
+%% Created for Javier Concha First at 2015-10-18 10:56:50 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{ASDManual2012,
+	Author = {ASD},
+	Date-Added = {2015-10-18 14:53:11 +0000},
+	Date-Modified = {2015-10-18 14:56:49 +0000},
+	Edition = {Rev. B, ASD Document 600979},
+	Month = {June},
+	Organization = {ASD Inc},
+	Title = {FieldSpec 4 User Manual},
+	Year = {2012}}
 
 @article{Ritchie:2008eu,
 	Author = {Ritchie, R. J. },
