Rrs added to SeaDAS in Background section. Fixed caption in area of study in Methodology section...

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -66,3 +66,4 @@
 
 \newacronym{nrmse}{NRMSE}{normalized root mean squared error}
 
+\newacronym{mumm}{MUMM}{Management Unit of the North Sea Mathematical Models}
