--- a/Methodology.tex
+++ b/Methodology.tex
@@ -875,12 +875,12 @@ The area of study for this research is the Lake Ontario Rochester Embayment (lat
 \begin{figure}[htb]
   \centering
   \includegraphics[height=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/AreaOfStudy1.pdf}
-  \caption{Area of Study. \label{fig:areaofstudy1} } 
+  \caption{Location of the area of study. The chosen area of study is located in Rochester, NY, USA. \label{fig:areaofstudy1} } 
 \end{figure}
 \begin{figure}[htb]
   \centering
   \includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/AreaOfStudy2.pdf}
-  \caption{Area of Study. \label{fig:areaofstudy2} } 
+  \caption{Rochester Embayment. This area of study exhibit a variety of water types, from oligotrophic to eutrophic waters. \label{fig:areaofstudy2} } 
 \end{figure}
 % -------------------------------------------------------------
 \subsection{Comparison with {\it in situ} data}
@@ -938,9 +938,6 @@ The \gls{rrs} spectra obtained from the \gls{mobelm} method are compared with th
 
 Additionally, this study presents a comparison of chlorophyll-{\it a} concentrations ($C_a$) retrieved from the standard bio-optical products described in \S\ref{subsec:chlempirical} (using \gls{seadas}) with the $C_a$ retrieved from the developed retrieval algorithm. These results are further compared with {\it in situ} data.
 
-
-
-
 % The results from the retrieval process will be validated by comparison with the concentration of water samples taken during field campaigns in the spring and summer of 2013 and 2014\todo{2015?}. These concentrations will be obtained from lab measurements made at the Rochester Institute of Technology. %For further validation, the results will be compared with products derived from ocean color satellites such as MODIS (e.g. MODIS Chl-{\it a} product), in regions where it is possible.
 
 % ----------------------------------------------------
@@ -948,5 +945,3 @@ Additionally, this study presents a comparison of chlorophyll-{\it a} concentrat
 The purpose of this chapter was to introduce the methodology required to achieve the objectives defined in the Chapter \S\ref{ch:objectives}. First, we began by explaining the different atmospheric correction techniques that will be investigated in this research along with the solar-glint removal algorithm. These atmospheric correction techniques include two different approaches. The first approach are methods applied to ocean color satellites. The second one is the MoB-ELM method. The in-water constituent retrieval process was presented. The LUT generation and the metrics used to perform the retrieval were described. Additionally, the ground truth data collection was briefly explained. Finally, how the results will be validated was described. 
 
 The next Chapter (\S\ref{ch:results}) will present the data and laboratory measurements available to date, along with the final results. These results include the \gls{mobelm} atmospheric correction applied to Landsat 8 imagery, and concentration of CPA maps obtained from the developed retrieval.
-
-
