--- a/Results.tex
+++ b/Results.tex
@@ -127,17 +127,19 @@ As can be seen in \autoref{fig:refcomp}, the atmospheric correction algorithm pr
 \end{figure}
 \subsection{SeaDAS-SWIR}
 \label{subsec:seadasswir}
-The second method analyzed in this work was the Gordon and Wang \cite{Gordon:1994} approach for atmospherically correcting satellite data over water, hereafter SeaDAS-SWIR. This method is implemented in the l2gen tool of the the Sea-viewing Wide Field-of-View Sensor (SeaWiFS) Data Analysis System (SeaDAS) software package, distributed by NASA's Ocean Biology Processing Group (OBPG) (more info: \url{http://seadas.gsfc.nasa.gov/}). The l2gen tool processes heritage Ocean-Color sensor (e.g. MODIS, SeaWiFS, OCTS or CZCS) data (Level 1) and generates Level 2 geophysical products by applying atmospheric corrections and bio-optical algorithms to the sensor. The l2gen tool includes a set of different atmospheric correction methods and variations, the Gordon and Wang's algorithm being one of them. The capability for processing OLI data was recently made fully operational in the SeaDAS version 7.2 \cite{Franz:2015}. 
+The second method analyzed in this work was the Gordon and Wang \cite{Gordon:1994} approach for atmospherically correcting satellite data over water, hereafter SeaDAS-SWIR. This method is implemented in the l2gen tool of the the \gls{seadas} software package described in \S\ref{subsec:seadasrrs}.
+
+% The l2gen tool processes heritage Ocean-Color sensor (e.g. MODIS, SeaWiFS, OCTS or CZCS) data (Level 1) and generates Level 2 geophysical products by applying atmospheric corrections and bio-optical algorithms to the sensor. 
 
 The atmospheric correction methods based on the Gordon and Wang approach use standard radiative transfer methods to compute and remove scattering by the air molecules, and two bands where the water contribution is negligible to estimate the aerosol contribution for the rest of the bands. Formerly, two NIR bands were used for estimating the aerosol contribution, but a combination of NIR and SWIR bands could be used when there is some water contribution in the NIR wavelengths \cite{Wang2009}. For this analysis, The bands used for the atmospheric correction were the SWIR 1 and SWIR 2 (SeaDAS-SWIR, band 6 and 7). The OLI's NIR band was not used because the water contribution in the NIR band cannot be considered negligible due to the presence of highly turbid waters in the scene (i.e. ponds). Water has much stronger absorption at the SWIR wavelengths than at the NIR wavelengths. 
 
 A full description of the OLI's processing in SeaDAS is described in \cite{Franz:2015}. The processing in SeaDAS includes a vicarious calibration derived from the marine optical buoy (MOBY) near Lanai, Hawaii. For the atmospheric correction in SeaDAS, the option used in this study was the operational atmospheric correction scheme (aer\_opt=-2), with the shortest and longest sensor wavelength for aerosol models selection equal to band 6 and band 7 (aer\_wave\_short=1609 and aer\_wave\_long=2201). Since a default land/water mask fine enough to resolve the ponds in the scene is not included in SeaDAS, all the pixels were forced to be processed as ocean (proc\_ocean=2) and the land mask was set to the ``landmask\_null.dat'' file. Additionally, in order to increase the SNR of SWIR bands and avoid $R_{rs}$ retrieval failing in the ponds, the SWIR bands were spatially averaged with a 5x5 window. This was accomplished by including a filter (filter\_opt=1) and modifying the default SeaDAS's file ``msl12\_filter.dat''.
 % -----------------------------------------------------------
 \subsection{Acolite-SWIR}
-The third atmospheric correction method analyzed was the implementation of the \cite{Gordon:1994}'s approach in the atmospheric correction for OLI lite (Acolite) tool (more info: \url{http://odnature.naturalsciences.be/remsem/software-and-data/acolite}). Acolite is a binary distribution of the OLI processing developed by the Royal Belgian Institute of Natural Science (RBINS). Acolite was used as a clone for the SeaDAS-SWIR method described above in \S~\ref{subsec:seadasswir}. Therefore, the option used was the default ``SWIR atmospheric correction'' with the ``Franz Ave'' gains for the vicarious calibration \cite{Franz:2015}.
+The third atmospheric correction method analyzed was the implementation of the \cite{Gordon:1994}'s approach in the atmospheric correction for OLI lite (Acolite) tool (\S\ref{subsec:acolite}). Acolite was used as a clone for the SeaDAS-SWIR method described above in \S~\ref{subsec:seadasswir}. Therefore, the option used was the default ``SWIR atmospheric correction'' with the ``Franz Ave'' gains for the vicarious calibration \cite{Franz:2015}.
 % -----------------------------------------------------------
 \subsection{SeaDAS-MUMM}
-The fourth method evaluated in this work was the Ruddick {\it et al.}'s atmospheric correction approach \cite{Ruddick:2000bs}, hereafter SeaDAS-MUMM (MUMM: Management Unit of the North Sea Mathematical Models). This method is a modification of \cite{Gordon:1994}'s algorithm for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. In this study, this method was applied using its implementation available in SeaDAS (aer\_opt=-10), using bands 4 and 5 and setting the calibration parameter $\alpha=8.7$ for OLI, as suggested by \cite{Vanhellemont2014} and \cite{Vanhellemont2014a}. 
+The fourth method evaluated in this work was the Ruddick {\it et al.}'s atmospheric correction approach \cite{Ruddick:2000bs}, hereafter SeaDAS-MUMM (\acrfull{mumm}). This method is a modification of \cite{Gordon:1994}'s algorithm for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. In this study, this method was applied using its implementation available in SeaDAS (aer\_opt=-10), using bands 4 and 5 and setting the calibration parameter $\alpha=8.7$ for OLI, as suggested by \cite{Vanhellemont2014} and \cite{Vanhellemont2014a}. 
           % -10: Multi-scattering with MUMM correction
           %      and MUMM NIR calculation
 
